# multi_species

./: CMakeLists.txt  README.md  run_FARRSIGHT2.cpp
debug/: FS_int.py  deck.json  make_dirs.py  myjob.sh  pic.sh  run.py
inc/: AMRSimulation.hpp  AMRStructure.hpp  FieldStructure.hpp  initial_distributions.hpp
src/: CMakeLists.txt  FieldStructure.cpp
src/simulation_files/: AMRSimulation.cpp  AMRSimulation_field.cpp  AMRSimulation_io.cpp  AMRSimulation_load.cpp  AMRSimulation_remesh.cpp  AMRSimulation_step.cpp  CMakeLists.txt
src/structure_files/: AMRStructure.cpp  AMRStructure_amr.cpp  AMRStructure_interp.cpp  AMRStructure_io.cpp  AMRStructure_restart.cpp  CMakeLists.txt  initial_distributions.cpp
standard_interface/: FS_int.py  __init__.py  deck.json  deck_utilities.py  diagnostic_plot.py  movie.sh  panel_height.py  phase_space_vis.py  pic.sh
